# aie-certification-challenge

./: .gitignore  README.md  bible-explorer.ipynb  gradio_app.py  notion.md  pyproject.toml
cache/kjv/: baseline_metrics.csv  chunked_docs.csv  finetuned_metrics.csv  golden_testset.csv
checkpoints/model/eval/: Information-Retrieval_evaluation_validation_results.csv
config/: settings.py
core/: dataset_builder.py  evaluate.py  ragas_evaluator.py  train.py
data/: kjv_preprocessed.csv
datasets-finetune/: test_dataset.jsonl  val_dataset.jsonl
embed/: chunking.py  embeddings.py  qdrant_vectorstore.py
pipeline/: finetune.py  golden_testset_generator.py  question_generator.py  rag_chain.py
qdrant_data/: meta.json
qdrant_data/collection/kjv_verse_chunks/: storage.sqlite
qdrant_data/collection/kjv_verse_chunks_ft/: storage.sqlite
vijayarulmuthu/finetuned_arctic_kjv_bible-0032306b-7760-4502-aeec-80a62c6097e6/: README.md  config.json  config_sentence_transformers.json  model.safetensors
vijayarulmuthu/finetuned_arctic_kjv_bible-0032306b-7760-4502-aeec-80a62c6097e6/eval/: Information-Retrieval_evaluation_validation_results.csv
